Fixed vertical align.

--- a/seasonal/styles/Button.module.css
+++ b/seasonal/styles/Button.module.css
@@ -32,6 +32,11 @@
   min-height: 80px;
   text-align: center;
   line-height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .buttonimage {
